WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151787
REGRESSION(
r192753
): Remote Web Inspector: Applications and Debuggables not showing up in debuggers
https://bugs.webkit.org/show_bug.cgi?id=151787
Summary
REGRESSION(r192753): Remote Web Inspector: Applications and Debuggables not s...
Joseph Pecoraro
Reported
2015-12-02 18:48:13 PST
* SUMMARY Applications and Debuggables not showing up in debuggers. * STEPS TO REPRODUCE 1. Launch application with JSContext 2. Launch Safari 3. Show Develop menu 4. Hover the JSContext (to trigger Indication) 5. Quit Safari 6. Launch Safari again 7. Show Develop menu => Application and JSContext not listed * NOTES Sampling the application with JSContext results in unexpected time hanging in receivedIndicateMessage:
> 2526 Inspector::RemoteInspectorXPCConnection::handleEvent > 2526 Inspector::RemoteInspector::xpcConnectionReceivedMessage > 2526 Inspector::RemoteInspector::receivedIndicateMessage > 2526 WTF::LockBase::lockSlow > 2526 WTF::ParkingLot::parkConditionally > 2526 std::__1::condition_variable::wait > 2526 _pthread_cond_wait > 2526 __psynch_cvwait
Seems there was an errant lock_guard added to RemoteInspector::receivedIndicateMessage that did nothing, but caused this.
Attachments
[PATCH] Proposed Fix
(1.41 KB, patch)
2015-12-02 18:50 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2015-12-02 18:48:25 PST
<
rdar://problem/23728977
>
Joseph Pecoraro
Comment 2
2015-12-02 18:50:16 PST
Created
attachment 266494
[details]
[PATCH] Proposed Fix
WebKit Commit Bot
Comment 3
2015-12-02 20:05:23 PST
Comment on
attachment 266494
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 266494 Committed
r192991
: <
http://trac.webkit.org/changeset/192991
>
WebKit Commit Bot
Comment 4
2015-12-02 20:05:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug