REGRESSION(r192753): Remote Web Inspector: Applications and Debuggables not showing up in debuggers https://bugs.webkit.org/show_bug.cgi?id=151787

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-12-02
Reviewed by Brian Burg.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::receivedIndicateMessage):
Removed lock that was unnecessarily added in r192753. It was
protecting nothing.

Canonical link: https://commits.webkit.org/169928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192991 268f45cc-cd09-0410-ab3c-d52691b4dbfc